Reveal.js en dépendance npm

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <title>Formation Zenika</title>
 
-    <link rel="stylesheet" href="reveal/reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.min.css">
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
     <link rel="stylesheet" href="reveal/theme-zenika/code.css" id="syntaxHighlighting">
 
     <!--[if lt IE 9]>
-    <script src="reveal/reveal.js/lib/js/html5shiv.js"></script>
+    <script src="node_modules/reveal.js/lib/js/html5shiv.js"></script>
     <![endif]-->
   </head>
 
@@ -27,8 +27,8 @@
       </footer>
     </div>
 
-    <script src="reveal/reveal.js/lib/js/head.min.js"></script>
-    <script src="reveal/reveal.js/js/reveal.min.js"></script>
+    <script src="node_modules/reveal.js/lib/js/head.min.js"></script>
+    <script src="node_modules/reveal.js/js/reveal.min.js"></script>
     <script src="reveal/run.js"></script>
   </body>
 </html>
