Permet de personnaliser les CSS par formation
Voir issue #34

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.min.css">
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
     <link rel="stylesheet" href="reveal/theme-zenika/code.css" id="syntaxHighlighting">
+    <link rel="stylesheet" href="ressources/custom.css" id="custom">
 
     <!--[if lt IE 9]>
     <script src="node_modules/reveal.js/lib/js/html5shiv.js"></script>
