--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>ZNK_FORMATION_NAME</title>
-
+    <title>FORMATION_NAME</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.min.css">
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
     <link rel="stylesheet" href="reveal/theme-zenika/code.css" id="syntaxHighlighting">
