Ensured compatibility with npm 3
npm 3 installs dependencies in a flat hierarchy. Some of the code was depending on npm installing dependencies as a tree. This dependency was eliminated.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <title>FORMATION_NAME</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="reveal.js/css/reveal.min.css">
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
     <link rel="stylesheet" href="reveal/theme-zenika/code.css" id="syntaxHighlighting">
     <link rel="stylesheet" href="ressources/custom.css" id="custom">
 
     <!--[if lt IE 9]>
-    <script src="node_modules/reveal.js/lib/js/html5shiv.js"></script>
+    <script src="reveal.js/lib/js/html5shiv.js"></script>
     <![endif]-->
   </head>
 
@@ -28,8 +28,8 @@
       </footer>
     </div>
 
-    <script src="node_modules/reveal.js/lib/js/head.min.js"></script>
-    <script src="node_modules/reveal.js/js/reveal.min.js"></script>
+    <script src="reveal.js/lib/js/head.min.js"></script>
+    <script src="reveal.js/js/reveal.min.js"></script>
     <script src="reveal/run.js"></script>
   </body>
 </html>
