upgrade reveal to v3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>FORMATION_NAME</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.css">
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
     <link rel="stylesheet" href="reveal/theme-zenika/code.css" id="syntaxHighlighting">
     <link rel="stylesheet" href="ressources/custom.css" id="custom">
@@ -29,7 +29,7 @@
     </div>
 
     <script src="node_modules/reveal.js/lib/js/head.min.js"></script>
-    <script src="node_modules/reveal.js/js/reveal.min.js"></script>
+    <script src="node_modules/reveal.js/js/reveal.js"></script>
     <script src="reveal/run.js"></script>
   </body>
 </html>
