--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>FORMATION_NAME</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
+    <link rel="shortcut icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
+
     <link rel="stylesheet" href="reveal.js/css/reveal.min.css">
 
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
