Ajout du support de font-awesome version 4.6.3, fix #109

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="reveal/theme-zenika/theme.css" id="theme">
     <link rel="stylesheet" href="reveal/theme-zenika/code.css" id="syntaxHighlighting">
     <link rel="stylesheet" href="ressources/custom.css" id="custom">
+    <link rel="stylesheet" href="reveal/font-awesome/css/font-awesome.min.css" id="font-awesome">
 
     <!--[if lt IE 9]>
     <script src="node_modules/reveal.js/lib/js/html5shiv.js"></script>
