:sparkles: publish lab exercices on training-material.zenika.com (#247)

--- a/summary.html
+++ b/summary.html
@@ -41,6 +41,7 @@
       <ul>
         <li><h2><a href="slides.html">Slides en ligne</a></h2></li>
         <li><h2><a target="_blank" href="pdf/FORMATION_SLIDES.pdf">Slides en PDF</a></h2></li>
+        <li><h2><a target="_blank" href="labs/index.html">Cahier d'exercices en ligne</a></h2></li>
         <li><h2><a target="_blank" href="pdf/FORMATION_CAHIER.pdf">Cahier d'exercices en PDF</a></h2></li>
         <li><h2><a target="_blank" href="FORMATION_GITHUB">Github</a></h2></li>
         <li><h2><a target="_blank" href="FORMATION_HOMEPAGE">sur le site Zenika</a></h2></li>
